--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/react-relay": "^11.0.1",
     "@types/relay-runtime": "^11.0.0",
     "next": "^10.1.3",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^7.0.0",
     "react": "^0.0.0-experimental-5027eb465",
     "react-dom": "^0.0.0-experimental-5027eb465",
     "react-no-ssr": "^1.1.0",
     "react-relay": "^0.0.0-experimental-4c4107dd",
     "relay-compiler-language-typescript": "^14.0.0",
-    "relay-runtime": "^11.0.2"
+    "relay-runtime": "^11.0.2",
+    "rooks": "^5.0.2-alpha.1"
   },
   "scripts": {
     "dev": "next dev",
