--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-no-ssr": "^1.1.0",
     "react-relay": "^0.0.0-experimental-4c4107dd",
     "relay-compiler-language-typescript": "^14.0.0",
+    "relay-nextjs": "^0.1.2",
     "relay-runtime": "^11.0.2",
     "rooks": "^5.0.2-alpha.1"
   },
