--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 schema:
-  - https://08ar7hpl.api.sanity.io/v1/graphql/production/default
+  - https://08ar7hpl.apicdn.sanity.io/v1/graphql/production/default
 generates:
   'schema.graphql':
     plugins:
@@ -17,7 +17,7 @@ generates:
     config:
       enumsAsTypes: true
       immutableTypes: true
-      onlyOperationTypes: true
+      #onlyOperationTypes: true
       scalars:
         JSONObject: 'any'
       useTypeImports: true
