--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-relay": "^11.0.1",
     "@types/relay-runtime": "^11.0.0",
+    "autoprefixer": "^10.2.5",
     "next": "^10.1.3",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^7.0.0",
+    "postcss": "^8.3.0",
     "react": "^0.0.0-experimental-5027eb465",
     "react-dom": "^0.0.0-experimental-5027eb465",
     "react-no-ssr": "^1.1.0",
@@ -21,7 +23,10 @@
     "relay-compiler-language-typescript": "^14.0.0",
     "relay-nextjs": "^0.1.2",
     "relay-runtime": "^11.0.2",
-    "rooks": "^5.0.2-alpha.1"
+    "rooks": "^5.0.2-alpha.1",
+    "styled-components": "^5.3.0",
+    "tailwindcss": "^2.1.2",
+    "xwind": "^0.8.0"
   },
   "scripts": {
     "dev": "next dev",
