fix: update deps

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^7.0.0",
     "postcss": "^8.3.0",
-    "react": "^0.14.0",
-    "react-dom": "^0.0.0-experimental-5027eb465",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-no-ssr": "^1.1.0",
-    "react-relay": "^0.0.0-experimental-4c4107dd",
+    "react-relay": "^11.0.2",
     "relay-compiler-language-typescript": "^14.0.0",
     "relay-nextjs": "^0.3.0",
     "relay-runtime": "^11.0.2",
